# web_8

./: data_loader.py  pyproject.toml  quote_search.py  quotes_loader.py
taks_2/: config.ini  connect.py  consumer_email.py  consumer_sms.py  models.py  producer.py
