[tool.poetry]
name = "web-8"
version = "0.1.0"
description = ""
authors = ["kirienkovitaliy <kirienkovitaliy1989@gmail.com>"]
readme = "README.md"
packages = [{include = "web_8"}]

[tool.poetry.dependencies]
python = "^3.11"
pymongo = "^4.3.3"
pika = "^1.3.2"
redis = "^4.5.5"
celery = "^5.2.7"
mongoengine = "^0.27.0"
redis-lru = "^0.1.2"
faker = "^18.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
